--- a/src/app/view-task/view-task.component.html
+++ b/src/app/view-task/view-task.component.html
@@ -60,7 +60,7 @@
                     Parent
                 </div>
                 <div class="col-sm-1">
-                    Priotity
+                    Priority
                 </div>
                 <div class="col-sm-2">
                     Start
