--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -9,17 +9,17 @@
     </div>
     <form #addTaskForm="ngForm" (ngSubmit)="addTask()">
         <div class="form-group row">
-            <label for="task" class="col-sm-1 col-form-label">Task:</label>
+            <label for="task" class="col-sm-1 col-form-label">{{getLabel('label.task')}}:</label>
             <div class="col-sm-5">
                 <input type="text" id="task" class="form-control taskInputBg" required #task="ngModel" name="task"
                 [class.taskInputBg]="task.valid || task.untouched"
                 [class.taskInputBg-Invalid]="task.invalid && task.touched" [(ngModel)]="taskDataModel.task">
             </div>
-            <small class="text-danger" [class.d-none]="task.valid || task.untouched">Task is required</small>
+            <small class="text-danger" [class.d-none]="task.valid || task.untouched">{{getLabel('label.task')}} is required</small>
         </div>
 
         <div class="form-group row">
-            <label for="priority" class="col-sm-1 col-form-label">Priority:</label>
+            <label for="priority" class="col-sm-1 col-form-label">{{getLabel('label.priority')}}</label>
             <div class="col-sm-5">
                 <input type="range" class="custom-range" min="0" max="30" step="1" id="priority" name="priority"
                 list="tickmarks" required [(ngModel)]="taskDataModel.priority">
@@ -34,7 +34,7 @@
         </div>
 
         <div class="form-group row">
-            <label for="parentTask" class="col-sm-1 col-form-label">Parent Task:</label>
+            <label for="parentTask" class="col-sm-1 col-form-label">{{getLabel('label.parentTask')}}:</label>
             <div class="col-sm-5">
                 <input type="text" id="parentTask" name="parentTask" class="form-control taskInputBg"
                 [(ngModel)]="taskDataModel.parentTask">
@@ -42,19 +42,19 @@
         </div>
 
         <div class="form-group row">
-            <label for="startDate" class="col-sm-1 col-form-label">Start Date:</label>
+            <label for="startDate" class="col-sm-1 col-form-label">{{getLabel('label.startDate')}}:</label>
             <div class="col-sm-5">
                 <input type="text" id="startDate" name="startDate" class="form-control taskInputBg" required #startDate="ngModel"
                 [class.taskInputBg]="startDate.valid || startDate.untouched"
                     [class.taskInputBg-Invalid]="startDate.invalid && startDate.touched"
                     [(ngModel)]="taskDataModel.startDate" placeholder="dd-mm-yyyy">
             </div>
-            <small class="text-danger" [class.d-none]="startDate.valid || startDate.untouched">Start Date is
+            <small class="text-danger" [class.d-none]="startDate.valid || startDate.untouched">{{getLabel('label.startDate')}} is
                     required</small>
         </div>
 
         <div class="form-group row">
-            <label for="endDate" class="col-sm-1 col-form-label">End Date:</label>
+            <label for="endDate" class="col-sm-1 col-form-label">{{getLabel('label.endDate')}}:</label>
             <div class="col-sm-5">
                 <input type="text" id="endDate" name="endDate" class="form-control taskInputBg" #endDate="ngModel"
                 [class.taskInputBg]="endDate.valid || endDate.untouched"
@@ -67,8 +67,8 @@
         <div class="form-group row">
             <div class="col-sm-1"></div>
             <div class="col-sm-5">
-                <button [disabled]="addTaskForm.form.invalid" type="submit" class="taskBtnGg">Add Task</button>
-                <button type="reset" class="taskBtnGg">Reset</button>
+                <button [disabled]="addTaskForm.form.invalid" type="submit" class="taskBtnGg">{{getLabel('label.addTask')}}</button>
+                <button type="reset" class="taskBtnGg">{{getLabel('label.reset')}}</button>
             </div>
         </div>
     </form>
