--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<span class="pageTitle">{{ title }}</span>
+<span class="pageTitle">{{getLabel('label.title')}}</span>
 <nav class="navbar navbar-expand-lg navbar-light-1" (click)="toggleNavbar()">
     <button class="custom-toggler navbar-toggler" type="button" data-toggle="collapse"
         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -9,12 +9,12 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <a class="nav-link tabUnselected" routerLink="/add-task" routerLinkActive="tabSelected"
-                    [routerLinkActiveOptions]="{exact: true}">Add Task</a>
+                    [routerLinkActiveOptions]="{exact: true}">{{getLabel('label.addTask')}}</a>
             </li>
 
             <li class="nav-item">
                 <a class="nav-link tabUnselected" routerLink="/view-task" routerLinkActive="tabSelected"
-                    [routerLinkActiveOptions]="{exact: true}">View Task</a>
+                    [routerLinkActiveOptions]="{exact: true}">{{getLabel('label.viewTask')}}</a>
             </li>
         </ul>
     </div>
