--- a/src/app/view-task/view-task.component.html
+++ b/src/app/view-task/view-task.component.html
@@ -9,34 +9,34 @@
     </div>
     <form>
         <div class="form-group row">
-            <label for="inpTask" class="col-sm-1 col-form-label">Task:</label>
+            <label for="inpTask" class="col-sm-1 col-form-label">{{getLabel('label.task')}}:</label>
             <div class="col-sm-5">
                 <input type="text" id="inpTask" class="form-control taskInputBg" (keyup)="matchByTask()">
             </div>
             
-            <label for="inpParentTask" class="col-sm-1 col-form-label">Parent Task:</label>
+            <label for="inpParentTask" class="col-sm-1 col-form-label">{{getLabel('label.parentTask')}}:</label>
             <div class="col-sm-5">
                 <input type="text" id="inpParentTask" class="form-control taskInputBg" (keyup)="matchByTask()">
             </div>
             
         </div>
         <div class="form-group row">
-            <label for="inpPriorityFrom" class="col-sm-1 col-form-label">Priority From:</label>
+            <label for="inpPriorityFrom" class="col-sm-1 col-form-label">{{getLabel('label.priorityFrom')}}:</label>
             <div class="col-sm-2">
                 <input type="text" id="inpPriorityFrom" class="form-control taskInputBg" (keyup)="matchByTask()">
             </div>
 
-            <label for="inpPriorityTo" class="col-sm-1 col-form-label">Priority To:</label>
+            <label for="inpPriorityTo" class="col-sm-1 col-form-label">{{getLabel('label.priorityTo')}}:</label>
             <div class="col-sm-2">
                 <input type="text" id="inpPriorityTo" class="form-control taskInputBg" (keyup)="matchByTask()">
             </div>
 
-            <label for="inpStartDate" class="col-sm-1 col-form-label">Start Date:</label>
+            <label for="inpStartDate" class="col-sm-1 col-form-label">{{getLabel('label.startDate')}}:</label>
             <div class="col-sm-2">
                 <input type="text" id="inpStartDate" class="form-control taskInputBg" (keyup)="matchByTask()" placeholder="dd-mm-yyyy">
             </div>
 
-            <label for="inpEndDate" class="col-sm-1 col-form-label">End Date:</label>
+            <label for="inpEndDate" class="col-sm-1 col-form-label">{{getLabel('label.endDate')}}:</label>
             <div class="col-sm-2">
                 <input type="text" id="inpEndDate" class="form-control taskInputBg" (keyup)="matchByTask()" placeholder="dd-mm-yyyy">
             </div>
@@ -54,19 +54,19 @@
         <div *ngFor="let task of allFilteredTasks">
             <div class="form-group row task_header">
                 <div class="col-sm-2">
-                    Task
+                    {{getLabel('label.task')}}
                 </div>
                 <div class="col-sm-2">
-                    Parent
+                    {{getLabel('label.parent')}}
                 </div>
                 <div class="col-sm-1">
-                    Priority
+                    {{getLabel('label.priority')}}
                 </div>
                 <div class="col-sm-2">
-                    Start
+                    {{getLabel('label.start')}}
                 </div>
                 <div class="col-sm-2">
-                    End
+                    {{getLabel('label.end')}}
                 </div>
                 <div class="col-sm-3">
         
@@ -90,9 +90,9 @@
                 </div>
                 <div class="col-sm-3">
                     <div *ngIf="(task.priority > -1)">
-                            <a class="taskBtnGg" target="_blank" [routerLink]="['/update-task',task.taskId]">Edit</a>
+                            <a class="taskBtnGg" target="_blank" [routerLink]="['/update-task',task.taskId]">{{getLabel('label.edit')}}</a>
                             
-                            <button type="button" [disabled] = "(task.priority == -1)" class="taskBtnGg" (click) = "endTask(task.taskId)">End Task</button>
+                            <button type="button" [disabled] = "(task.priority == -1)" class="taskBtnGg" (click) = "endTask(task.taskId)">{{getLabel('label.endTask')}}</button>
                     </div>
                     
                 </div>
@@ -102,6 +102,6 @@
     </div>
 
     <div *ngIf="allFilteredTasks?.length == 0">
-        <label>No Tasks available!</label>
+        <label>{{getLabel('label.noTaskAvailable')}}</label>
     </div>
 </div>
