--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,17 @@
-<span class="pageTitle">{{getLabel('label.title')}}</span>
+<div class="form-group row">
+    <div class="col-sm-11">
+        <span class="pageTitle">{{getLabel('label.title')}}</span>
+    </div>
+    <div class="col-sm-1">
+        <input type="text" id="langSelect" name="langSelect" class="form-control taskInputBg" list="langLst"
+            (change)="setLanguage($event)" [(value)]="lang">
+
+        <datalist id="langLst" style="display:none">
+            <option value='en' selected>English</option>
+            <option value="fr">French</option>
+        </datalist>
+    </div>
+</div>
 <nav class="navbar navbar-expand-lg navbar-light-1" (click)="toggleNavbar()">
     <button class="custom-toggler navbar-toggler" type="button" data-toggle="collapse"
         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
